--- a/web/package.json
+++ b/web/package.json
@@ -13,19 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
-    "@chakra-ui/react": "^1.6.2",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@react-pdf/renderer": "^2.0.13",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
-    "framer-motion": "4",
-    "next": "^10.2.2",
+    "framer-motion": "^4.1.17",
+    "next": "^10.2.3",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
-    "react-hook-form": "^7.6.4",
+    "react-hook-form": "^7.7.1",
     "react-query": "^3.16.0",
     "yup": "^0.32.9",
     "zustand": "^3.5.1"
